<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="viewStart"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <CheckBox
            android:id="@+id/chkProduto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/produto1" />

        <CheckBox
            android:id="@+id/chkProduto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/produto2" />

        <CheckBox
            android:id="@+id/chkProduto3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/produto3" />

        <CheckBox
            android:id="@+id/chkProduto4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/produto4" />

        <CheckBox
            android:id="@+id/chkProduto5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/produto5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <Button
            android:id="@+id/btnTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="calcularTotal"
            android:text="@string/btnCalculo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textValorTotal"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/textValorTotal"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textResultado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>